cmake_minimum_required (VERSION 2.8)

if(WITH_WOLFSSL)
  link_directories(${WOLFSSL_LIBRARIES})
  include_directories($WOLFSSL_INCLUDE_DIRS)
  set(TESTWSS_OPTLIB "wolfssl")
endif()
link_directories(${LIBGHTTP_LIBRARIES})
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/../flv )
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/../fastrtmp )
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/../wss )
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/../sample/devices)

include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/devices/aj/include )

link_directories( ${CMAKE_CURRENT_SOURCE_DIR}/devices/aj/libs/)
if ( AJ )
    set(AJ_LIBS devsdk tools)
    set( IPC_DEV_FILE ${CMAKE_CURRENT_SOURCE_DIR}/devices/aj_ipc.c )
else()
    set( IPC_DEV_FILE ${CMAKE_CURRENT_SOURCE_DIR}/devices/ipc_simulator.c )
endif()
ADD_EXECUTABLE( fastrtmp-app ./main.c ./devices/dev_core.c ${IPC_DEV_FILE} )
target_link_libraries( fastrtmp-app fastrtmp_STATIC ${TESTWSS_OPTLIB} ghttp ${AJ_LIBS} pthread m)
add_dependencies( fastrtmp-app fastrtmp_STATIC )
